# GymBroBot

./: .gitingnore  Makefile  README.MD  dev.env  docker-compose.yaml  pyproject.toml
app/: config.py  const.py  data.py  handlers.py  keyboards.py  main.py
app/database/: __init__.py  base.py  data_migration.py  train.py
app/handlers/: __init__.py  common.py  history.py  recommend.py  report.py  train.py  utils.py
app/services/: train_fsm.py
docker/: Dockerfile
