[tool.poetry]
name = "gymbro-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
python-dotenv = "^1.0.1"
aiogram = "^3.8.0"
motor = "^3.4.0"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
